# Slumber

./: .gitignore  .gitmodules  .gitmodules~  README.md  slumber.conf
SlumberDuino/: AppMeArduino.ino
androidusbpy/: .androidcomm.py.swn  .androidcomm.py.swo  androidcomm.py  androidconfig.py  ok.txt  resetusb  testclient.py  usbreset.c
appmea-server/: Cargo.toml
appmea-server/src/: main.rs  sql.rs
band/: AppMeArduino.ino  README.md
hub/: CMakeLists.txt  CMakeLists.txt~  Macefile  Makefile  Makehost  basics.js  compile_commands.json  m2x.js  main.js  new2x.js  serialCom.js  spack  spack~  test.js  toServ.js  wifi.js
hub/csrc/: sbluetooth.c
hub/include/: SlumberUI.h  responsehandler.hpp  serverstream.hpp  slumbererror.h  slumbererror.hpp  slumberui.h
hub/include/sbluetooth/: gatt.h  sbluetooth.h  sbluetooth.hpp
hub/include/security/: account.hpp  requests.hpp  tokens.hpp
hub/include/util/: config.hpp  log.hpp  stringparse.hpp  timestamps.hpp
hub/old/: README.md  sbluetooth_backup.c  spack~
hub/src/: .slumber.cpp.swn  SlumberUI.cpp  log.cpp  responsehandler.cpp  serverstream.cpp  slumber.cpp  slumberui.cpp
hub/src/sbluetooth/: bluetooth.cpp
hub/src/security/: .tokens.cpp.swn  requests.cpp  tokens.cpp
hub/src/util/: log.cpp
hub/test/: blue.cpp  bluetest.c  bluetest.cpp  testbluetooth.c  testcompiler.cpp
hub/ui/: CMakeLists.txt
hub/ui/include/: SlumberUI.h
hub/ui/src/: Main.cpp
hubCom/: PhoneVID.txt  androidconfig.py
old/server-Rust/src/: sql.rs
slumber-server/: .gitignore  Cargo.toml
slumber-server/src/: main.rs  sql.rs  user.rs
webUI/: index.html
webUI/.sass-cache/5b74a2eceb25bf997e1821c32bc0c246fc24b5b3/: _buttons.scssc  _cards.scssc  _carousel.scssc  _chips.scssc  _collapsible.scssc  _color.scssc  _dropdown.scssc  _global.scssc  _grid.scssc  _icons-material-design.scssc  _materialbox.scssc  _mixins.scssc  _modal.scssc  _navbar.scssc  _normalize.scssc  _preloader.scssc  _roboto.scssc  _sideNav.scssc  _slider.scssc  _table_of_contents.scssc  _tabs.scssc  _toast.scssc  _tooltip.scssc  _typography.scssc  _variables.scssc  _waves.scssc
webUI/.sass-cache/5f8bb2afbd26f10563dd7934011d45f451527302/: _default.date.scssc  _default.scssc  _default.time.scssc
webUI/.sass-cache/aaef722c2f40e1e0d24ce7245107968c23d59051/: materialize.scssc  styles.scssc
webUI/.sass-cache/e76ae1628686079c40173406b865b60f7a20ff7a/: _checkboxes.scssc  _file-input.scssc  _forms.scssc  _input-fields.scssc  _radio-buttons.scssc  _range.scssc  _select.scssc  _switches.scssc
webUI/js/custom/: chart.js
