[package]
name = "server"
version = "0.1.0"
authors = ["oliver <oliverswarne@gmail.com>"]

[dependencies.nickel]
version="0.9.0"

[dependencies.postgres]
version  = "0.12"
features = ["with-uuid"]

[dependencies.uuid]
version = "0.3.1"
features=["rustc-serialize"]

[dependencies]
rustc-serialize="0.3.19"
hyper = "0.9.10"
bcrypt = "0.1"
